It's harder than it has been :/